fix view on mobile screen

--- a/src/pages/ClockIn/index.scss
+++ b/src/pages/ClockIn/index.scss
@@ -1,6 +1,8 @@
 .clock-in{
-    width: 411px;
+    width: 100vw;
+    max-width: 411px;
     height: 711px;
+    padding: 5px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -32,7 +34,12 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap : 25px
+        gap : 25px;
+        p {
+            margin: 0;
+            margin-bottom: 5px;
+            font-weight: 600;
+        }
     }
 
     .learn-more{
